# bayesian-optimization-tutorial

./: Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
bayesian_optimization_tutorial/: __init__.py
bayesian_optimization_tutorial/core/: acquisition.py  gaussian_process.py  kernels.py  loop.py  optimisers.py
bayesian_optimization_tutorial/datasets/: branin.py
docs/: index.md
examples/: 01_minimise_branin.py
tests/: test_gaussian_process.py
